fixed issue with divs overflowing from grid

--- a/grails-app/assets/stylesheets/iris.scss
+++ b/grails-app/assets/stylesheets/iris.scss
@@ -291,6 +291,7 @@ $schema-list-padding: percentage(0.03);
 //  background-color: blue;
 //}
 
+//CREATION AREA
 .overlay{
   /* Height & width depends on how you want to reveal the overlay (see JS below) */
   height: 100%;
@@ -301,16 +302,18 @@ $schema-list-padding: percentage(0.03);
   left: 0;
   top: 0;
   background-color: $background-color; /* Black fallback color */
-  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow: auto; /* Disable horizontal scroll */
   transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 
   /* Position the content inside the overlay */
   .overlay-content {
     position: relative;
-    top: 25%; /* 25% from the top */
+    top: 2%; /* 25% from the top */
     width: 100%; /* 100% width */
     max-width: 100%;
     margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    z-index: inherit;
+    max-height: inherit;
   }
 }
 
